--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="root">
     </div>
 
-    <!-- Loads a provided function a called getAllEpisodes() which returns all episodes -->
+    <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
 
     <!-- Loads YOUR javascript code -->
