--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
   <body>
     <div id="root">
-    </div>
-
+      <div id="allEpisodes"></div>
+    </div >
+    
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
+ 
 
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
