--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <input id="search-input" type="text" placeholder="Search" />
     <div id="root">
       <div id="allEpisodes"></div>
     </div >
@@ -16,7 +17,7 @@
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
  
-
+    <footer>Data comes from <a href="https://tvmaze.com/">TV maze</a>Thanks tv maze!</footer>
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
   </body>
