--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
   <body>
     <input id="search-input" type="text" placeholder="Search" />
+    <select id="select-input"></select>
+
     <div id="root">
       <div id="allEpisodes"></div>
     </div >
     
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
-    <script src="episodes.js"></script>
+    <!--script src="episodes.js"></script-->
  
     <footer>Data comes from <a href="https://tvmaze.com/">TV maze</a>Thanks tv maze!</footer>
     <!-- Loads YOUR javascript code -->
