--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>TV Show Project | Ali Dashti (My GitHub ali1373107)</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <script src="shows.js"></script>
+    <script src="script.js" defer></script>
   </head>
 
   <body>
+    <select id="select-show"></select>
     <input id="search-input" type="text" placeholder="Search" />
     <select id="select-input"></select>
 
@@ -21,6 +24,6 @@
  
     <footer>Data comes from <a href="https://tvmaze.com/">TV maze</a>Thanks tv maze!</footer>
     <!-- Loads YOUR javascript code -->
-    <script src="script.js"></script>
+    
   </body>
 </html>
